--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -7,14 +7,22 @@
     <title>Document</title>
 </head>
 <body>
+    <!--objective 1 -->
     <form> 
     <input type="text" id="textBox" >
     <input  id = "submitBtn" type= "submit" value="Submit ">
     </form>
     <br>
+    <!--objective 2-->
     <div id="div"> I'm a div!</div>
     <br>
-    
+    <!--objective 3 -->
+    <p id="p">I'm the paragraph!</p>
+    <br>
+<!--objective 6-->
+<button id="btn3">Click to see some friends. </button>
+<ul id="ul"></ul>
+<br>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
